@@ -47,6 +47,12 @@ INCOMPATIBILITY.
 * Sledgehammer: The URL for SystemOnTPTP, which is used by remote
 provers, has been updated.
 
+* Session HOL-SPARK: .prv files are no longer written to the
+file-system, but exported to the session database. Results may be
+retrieved with the "isabelle export" command-line tool like this:
+
+  isabelle export -x "*:**.prv" HOL-SPARK-Examples
+
 
 *** ML ***
 
